docs: Expand documents on protocol

--- a/docs/specification/protocol/transport.mdx
+++ b/docs/specification/protocol/transport.mdx
@@ -29,7 +29,7 @@ Method requests look like:
     "jsonrpc": "2.0",
     "id": <uuid>,
     "method": <method name>,
-    "params": <input to method as JSON>
+    "params": <parameter to method as JSON>
 }
 ```
 
