docs: stub out more docs

--- a/docs/docs/workflows/schema.mdx
+++ b/docs/docs/workflows/schema.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 5
+sidebar_position: 7
 ---
 
-# Workflow Schema
+# Schema
 
 import SchemaDisplay from "@site/src/components/SchemaDisplay";
 import Schema from "@site/static/schemas/workflowSchema.json";
