--- a/docs/docs/protocol/schema.mdx
+++ b/docs/docs/protocol/schema.mdx
@@ -6,4 +6,4 @@ sidebar_position: 5
 
 import SchemaDisplay from "@site/src/components/SchemaDisplay";
 
-<SchemaDisplay schema="https://stepflow.org/schemas/protocolSchema.json"/>
+<SchemaDisplay schema="https://stepflow.org/schemas/protocol.json"/>
