--- a/docs/docs/workflows/schema.mdx
+++ b/docs/docs/workflows/schema.mdx
@@ -5,6 +5,5 @@ sidebar_position: 7
 # Schema
 
 import SchemaDisplay from "@site/src/components/SchemaDisplay";
-import Schema from "@site/static/schemas/workflowSchema.json";
 
-<SchemaDisplay source={Schema}/>
+<SchemaDisplay schema="https://stepflow.org/schemas/flow.json"/>
