--- a/docs/docs/protocol/components.mdx
+++ b/docs/docs/protocol/components.mdx
@@ -8,6 +8,66 @@ import SchemaDisplay from "@site/src/components/SchemaDisplay";
 
 ## Component Discovery
 
+The component discovery process allows StepFlow to enumerate all available components from a component server. This is used for validation, tooling, and user interfaces.
+
+```mermaid
+sequenceDiagram
+    participant SF as StepFlow
+    participant CS as Component Server
+    SF-)+CS: components/list request
+    CS--)-SF: components/list response
+```
+
+### Request Format
+
+<SchemaDisplay schema="https://stepflow.org/schemas/protocol.json" path="$defs/ComponentListParams"/>
+
+### Response Format
+
+<SchemaDisplay schema="https://stepflow.org/schemas/protocol.json" path="$defs/ComponentListResult"/>
+
+### Usage Examples
+
+The `components/list` method is typically called:
+- During plugin initialization to discover available components
+- By CLI tools like `stepflow list-components`
+- By IDE extensions for autocompletion
+- By workflow validation tools
+
+Example request:
+```json
+{
+  "jsonrpc": "2.0",
+  "id": "list-1",
+  "method": "components/list",
+  "params": {}
+}
+```
+
+Example response:
+```json
+{
+  "jsonrpc": "2.0",
+  "id": "list-1",
+  "result": {
+    "components": [
+      {
+        "name": "data_processor",
+        "description": "Process and transform data according to rules"
+      },
+      {
+        "name": "http_client",
+        "description": "Make HTTP requests with retry logic"
+      },
+      {
+        "name": "cache_manager",
+        "description": "Store and retrieve cached data"
+      }
+    ]
+  }
+}
+```
+
 ## Component Information
 
 The component information request is used to retrieve metadata about a specific component, including its input and output schemas.
@@ -69,59 +129,150 @@ An alternative could be allowing these to be inputs to the component, configured
 
 ### Error Handling
 
-The component server may return errors in the following cases:
-- Component not found (error code: -32601)
-- Invalid input data (error code: -32000)
-- Server not initialized (error code: -32002)
+Component servers should return appropriate JSON-RPC error responses for various failure conditions. StepFlow defines standard error codes for consistent error handling across all components.
 
-:::note
-Flesh out the error protocol.
-It would likely be nice to have a standard set of error codes, etc.
-:::
+#### Standard Error Codes
 
-## Dynamic Components
+| Code | Name | Description | When to Use |
+|------|------|-------------|-------------|
+| -32700 | Parse Error | Invalid JSON was received | Malformed JSON in request |
+| -32600 | Invalid Request | The JSON sent is not a valid Request object | Missing required fields |
+| -32601 | Method Not Found | The method does not exist | Unknown component or method |
+| -32602 | Invalid Params | Invalid method parameter(s) | Schema validation failure |
+| -32603 | Internal Error | Internal JSON-RPC error | Server implementation error |
+| -32000 | Server Error | Generic server error | Component execution failure |
+| -32001 | Component Not Found | Requested component does not exist | Unknown component name |
+| -32002 | Server Not Initialized | Server has not been initialized | Missing initialization |
+| -32003 | Invalid Input Schema | Input does not match component schema | Schema validation failure |
+| -32004 | Component Execution Failed | Component failed during execution | Business logic error |
+| -32005 | Resource Unavailable | Required resource is not available | External dependency failure |
+| -32006 | Timeout | Operation timed out | Long-running operation timeout |
+| -32007 | Permission Denied | Insufficient permissions | Authorization failure |
 
-Dynamic components allow the component server to create a new compnonent that can be referenced later in the workflow.
-Since a component is just a URL, the main capability here is that the workflow format allows the component to a step to depend on the result of an earlier step.
+#### Error Response Format
 
-```mermaid
-sequenceDiagram
-    participant SF as StepFlow
-    participant CS as Component Server
-    SF-)+CS: component_execute request
-    CS--)-SF: component_execute response
-    Note over SF,CS: Later
-    SF-)+CS: component_execute  request
-    Note right of CS: Since custom component has been evicted, the component server asks for the arguments again.
-    opt Custom component has been evicted
-    CS-)+SF: step_args request
-    SF--)-CS: step_args response
-    end
-    CS--)-SF: component_execute response
+```json
+{
+  "jsonrpc": "2.0",
+  "id": "req-123",
+  "error": {
+    "code": -32001,
+    "message": "Component not found",
+    "data": {
+      "component": "unknown_component",
+      "available_components": ["data_processor", "http_client"],
+      "suggestion": "Check component name spelling"
+    }
+  }
+}
 ```
 
-The first component executed creates a new component from it's arguments, and returns a URL for executing the component.
-This allows it to to cache a connection or other information.
+#### Error Response Fields
 
-When the dynamically created component is executed, the componont server will attempt to re-use the state it created from the original call.
-If that has been evicted or the component server was restarted, it may need to issue a `step_args` request to get arguments for the original creation step.
+- **`code`** (required): Standard error code from the table above
+- **`message`** (required): Human-readable error description
+- **`data`** (optional): Additional structured error information
 
-:::note
+#### Common Error Scenarios
 
-This means that the URL for the dynamically created component should also include the Workflow UUID and the Step ID, allowing the component to embed those in the dynamic component URL.
+**Component Not Found:**
+```json
+{
+  "jsonrpc": "2.0",
+  "id": "req-123",
+  "error": {
+    "code": -32001,
+    "message": "Component 'unknown_processor' not found",
+    "data": {
+      "component": "unknown_processor",
+      "available_components": ["data_processor", "text_processor", "image_processor"]
+    }
+  }
+}
+```
 
-:::
+**Invalid Input Schema:**
+```json
+{
+  "jsonrpc": "2.0",
+  "id": "req-124",
+  "error": {
+    "code": -32003,
+    "message": "Input validation failed",
+    "data": {
+      "component": "data_processor",
+      "validation_errors": [
+        {
+          "field": "data.records",
+          "error": "Required field missing"
+        },
+        {
+          "field": "data.rules.transformation",
+          "error": "Must be one of: uppercase, lowercase, title"
+        }
+      ]
+    }
+  }
+}
+```
 
-### Step Arguments Request
+**Component Execution Failed:**
+```json
+{
+  "jsonrpc": "2.0",
+  "id": "req-125",
+  "error": {
+    "code": -32004,
+    "message": "HTTP request failed",
+    "data": {
+      "component": "http_client",
+      "url": "https://api.example.com/data",
+      "http_status": 404,
+      "retry_count": 3,
+      "last_error": "Connection timeout after 30 seconds"
+    }
+  }
+}
+```
 
-`step_args` is a request sent from the component server to the workflow runtime to request the arguments from an earlier step.
-It is most often used by dynamic components when the component server has been restarted or evicted the state for a dynamically created component.
-The workflow runtime sends the arguments used for the given step -- typically the one previously used for creating the component -- allowing the component server to recreate it.
+#### Error Handling Best Practices
 
-{/* <SchemaDisplay schema="https://stepflow.org/schemas/protocol.json" path="defs/StepArgumentsRequest"/> */}
-TODO: StepArgumentsRequest schema definition needs to be updated
+**For Component Developers:**
 
-### Step Arguments Response
+1. **Use Appropriate Codes**: Choose the most specific error code for each situation
+2. **Provide Context**: Include helpful details in the `data` field
+3. **Be Consistent**: Use the same error patterns across all components
+4. **Log Errors**: Log detailed error information for debugging
 
-{/* <SchemaDisplay schema="https://stepflow.org/schemas/protocol.json" path="defs/StepArgumentsResponse"/> */}
-TODO: StepArgumentsResponse schema definition needs to be updated
+```python
+# Python component error handling example
+try:
+    result = process_data(input.data)
+    return ProcessOutput(result=result)
+except ValidationError as e:
+    raise JsonRpcError(
+        code=-32003,
+        message="Input validation failed",
+        data={
+            "component": "data_processor",
+            "validation_errors": e.errors
+        }
+    )
+except ExternalServiceError as e:
+    raise JsonRpcError(
+        code=-32005,
+        message="External service unavailable",
+        data={
+            "component": "data_processor",
+            "service": e.service_name,
+            "retry_after": e.retry_after
+        }
+    )
+```
+
+**For StepFlow Runtime:**
+
+1. **Parse Error Details**: Extract actionable information from error responses
+2. **Retry Logic**: Implement appropriate retry behavior based on error types
+3. **User Feedback**: Provide clear error messages to workflow authors
+4. **Error Aggregation**: Collect and report error patterns for debugging
