feat: add eval method and demonstrate loop/map
Also fixed some problems with parsing $from in ValueTemplate which
caused errors to be suppressed / tests to fail.

Since the `flows/evaluate` method allows invoking a flow (and therofore
takes a flow as an argument) the protocol schema now includes the flow
schema. As a result, I removed the separate `flow.json` schema file
and the corresponding generated code since they were overlapping.

--- a/docs/docs/workflows/schema.mdx
+++ b/docs/docs/workflows/schema.mdx
@@ -6,4 +6,4 @@ sidebar_position: 7
 
 import SchemaDisplay from "@site/src/components/SchemaDisplay";
 
-<SchemaDisplay schema="https://stepflow.org/schemas/flow.json"/>
+<SchemaDisplay schema="https://stepflow.org/schemas/protocol.json" path="$defs/Flow"/>
