--- a/docs/docs/protocol/transport.mdx
+++ b/docs/docs/protocol/transport.mdx
@@ -89,7 +89,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: python
-    args: ["-m", "stepflow_sdk"]
+    args: ["-m", "stepflow_py"]
 ```
 
 **Communication Flow:**
@@ -125,7 +125,7 @@ For HTTP transport, StepFlow supports optional MCP (Model Context Protocol) styl
 sequenceDiagram
     participant C as StepFlow Client
     participant S as Component Server
-    
+
     C->>S: GET /runtime/events (SSE)
     S-->>C: event: endpoint<br/>data: {"endpoint": "/session/abc123"}
     C->>S: POST /session/abc123 (JSON-RPC requests)
@@ -146,7 +146,7 @@ If the server doesn't support MCP-style negotiation, StepFlow will fall back to 
 **Python SDK HTTP Server:**
 ```python
 # Start server in HTTP mode
-from stepflow_sdk import StepflowServer
+from stepflow_py import StepflowServer
 import uvicorn
 
 server = StepflowServer()
@@ -166,8 +166,8 @@ if __name__ == "__main__":
 **Command Line:**
 ```bash
 # Start Python SDK server in HTTP mode
-python -m stepflow_sdk --http --port 8080
+python -m stepflow_py --http --port 8080
 
 # Or using uv
-uv run --project . --extra http python -m stepflow_sdk --http --port 8080
+uv run --project . --extra http python -m stepflow_py --http --port 8080
 ```
