docs: Updated doc site with cleaner integrations sidebar that contains LangChain and now the stepflow-langflow as an include to the README. Closes #507.

--- a/docs/docs/integrations/langchain.mdx
+++ b/docs/docs/integrations/langchain.mdx
@@ -4,6 +4,6 @@ sidebar_position: 3
 
 import LangchainReadme from '../../../examples/langchain/README.md';
 
-# LangChain Integration
+# LangChain
 
 <LangchainReadme />
